src/Pages/CSS/Chats.css
.chats {
    margin-top: 3px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 20px;
    height: 650px;
}

.chats.dark {
    background-color: #313131;
    color: #EDEDED;
}

.chats-points, .analyses-points {
    width: 300px;
    max-height: 500px;
    background: #EDEDED;
    border-radius: 8px;
    overflow-y: auto;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 0 20px;
    margin-right: 20px;
}

.chats.dark .chats-points, .chats.dark .analyses-points {
    background: #313131;
    color: #EDEDED;
}

.chats-points ul, .analyses-points ul {
    list-style: none;
    padding: 0;
    width: 100%;
    display: flex;
    flex-direction: column;
    margin: 0;
}

.chats-points li, .analyses-points li {
    margin: 10px 0;
    font-size: 25px;
    padding: 10px;
    text-align: center;
    cursor: pointer;
    background-color: #e0e0e0;
    border-radius: 10px;
    border-bottom: 1px solid #7DAFFF;
}

.chats-points li:hover, .analyses-points li:hover {
    background: #444;
}

.chats-points li:last-child, .analyses-points li:last-child {
    margin: 10px 0 5px 0;
}

.chats-points li:first-child, .analyses-points li:first-child {
    margin: 5px 0 10px 0;
}

.chats-points li:hover, .analyses-points li:hover {
    background: #555;
}

.plus {
    width: 50px;
    height: 50px;
    margin: 2px 0 5px 0;
    cursor: pointer;
}

.loading-spinner {
    border: 4px solid #f3f3f3;
    border-top: 4px solid #0073FF;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    animation: spin 2s linear infinite;
    margin: 20px auto;
}

.chats.dark .loading-spinner {
    border: 4px solid #3A3A3A;
    border-top: 4px solid #FF9736;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.chats.dark .chats-points li:hover, .chats.dark .analyses-points li:hover {
    background: #555;
    border-radius: 10px;
}

.chats-points li.selected, .analyses-points li.selected {
    background: #d0d0d0;
    transform: scale(1.1);
    position: relative;
    border-radius: 10px;
    z-index: 1;
    transition: transform 0.5s ease, background 0.5s ease, text-align 0.5s ease;
}

.chats.dark .chats-points li.selected, .chats.dark .analyses-points li.selected {
    background: #555;
    text-align: center;
    transition: transform 0.5s ease, background 0.5s ease, text-align 0.5s ease;
}

.chats-item {
    width: 70%;
    background: #fff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    overflow-y: auto;
    max-height: 550px;
}

.chats-item::-webkit-scrollbar {
    width: 12px;
}

.chats-item::-webkit-scrollbar-track {
    background: #7DAFFF;
    border-radius: 6px;
}

.chats-item::-webkit-scrollbar-thumb {
    background: #0073FF;
    border-radius: 6px;
}

.chats-item::-webkit-scrollbar-thumb:hover {
    background: #005bb5;
}

.chats.dark .chats-item::-webkit-scrollbar-track {
    background: #FFBC7D;
    border-radius: 6px;
}

.chats.dark .chats-item::-webkit-scrollbar-thumb {
    background: #FF7A00;
    border-radius: 6px;
}

.chats.dark .chats-item::-webkit-scrollbar-thumb:hover {
    background: #e65c00;
}

.chats.dark .chats-item {
    background: #444;
    color: #EDEDED;
}

.chats-item h2 {
    margin-top: 0;
}

.chats.mobile{
    height: auto;
}

.chats.dark .chats-points li, .chats.dark .analyses-points li {
    background-color: #444;
    border-radius: 10px;
    border-bottom: 1px solid #FF7A00;
}

.chats-points::-webkit-scrollbar, .analyses-points::-webkit-scrollbar {
    width: 12px;
}

.chats-points::-webkit-scrollbar-track, .analyses-points::-webkit-scrollbar-track {
    background: #7DAFFF;
    border-radius: 6px;
}

.chats-points::-webkit-scrollbar-thumb, .analyses-points::-webkit-scrollbar-thumb {
    background: #0073FF;
    border-radius: 6px;
}

.chats-points::-webkit-scrollbar-thumb:hover, .analyses-points::-webkit-scrollbar-thumb:hover {
    background: #005bb5;
}

.chats.dark .chats-points::-webkit-scrollbar-track, .chats.dark .analyses-points::-webkit-scrollbar-track {
    background: #FFBC7D;
    border-radius: 6px;
}

.chats.dark .chats-points::-webkit-scrollbar-thumb, .chats.dark .analyses-points::-webkit-scrollbar-thumb {
    background: #FF7A00;
    border-radius: 6px;
}

.chats.dark .chats-points::-webkit-scrollbar-thumb:hover, .chats.dark .analyses-points::-webkit-scrollbar-thumb:hover {
    background: #e65c00;
}

.analysis-table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 20px;
}

.analysis-table th, .analysis-table td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: center;
}

.analysis-table td.checked {
    color: #0073FF;
    font-weight: bold;
}

.chats.dark .analysis-table td.checked {
    color: #FF9736;
}

/* Mobile styles */
.chats.mobile {
    flex-direction: column;
    align-items: stretch;
}

.chats-points-container.mobile {
    display: flex;
    justify-content: space-between;
    margin: 20px 0 20px 0 ;
}

.chats-points.mobile, .analyses-points.mobile {
    width: 45%;
    margin-right: 10px;
}

.chats-item.mobile {
    margin: 0 0 15px 0;
    width: 90%;
    height: 100%;
}

.chats-item.mobile .analysis-table {
   height: 100%;
}

.chats.mobile{
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.chats-points-container.mobile {
    width: 96%;
}

